# Wrenchly

./: .env.example  .gitignore  README.md  TODO.txt  init.bat  package-lock.json  package.json  pyproject.toml
backend/: db.sqlite3
backend/api/: admin.py  api_testing.py  apps.py  crud.py  email.py  gemini.py  imagens.py  models.py  preventivos.py  serializers.py  signals.py  storage.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_garagem_user_alter_defenicoes_user_and_more.py  0002_remove_carros_carro_id_remove_cronicos_problema_id_and_more.py  0002_remove_cronicos_trocarnokm_and_more.py  0002_remove_notas_manutencao.py  0002_rename_cc_carros_cilindrada.py  0003_carros_ano_carros_marca.py  0003_carros_proxima_manutenção.py  0003_carros_remove_carro_garagem_remove_manutencao_carro_and_more.py  0003_rename_risco_normalizado_cronicos_risco_and_more.py  0004_alter_carros_transmissao.py  0004_remove_carros_tdi_carros_cc.py  0004_rename_proxima_manutenção_carros_proxima_manutencao.py  0005_cronicos_trocarnokm_preventivos_trocarnadata_and_more.py  0019_carrosimagens.py  (+19 more)
backend/config/: settings.py  urls.py
backend/demo/: forms.py  urls.py
backend/utils/: colors.py  res_status.py
common/: TODO.txt  WrenchlyPaginas.drawio  pageMap.drawio  projGraph.drawio
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
project/: db.sqlite3
project/api/: admin.py  crud.py  gemini.py  models.py  serializers.py  urls.py  views.py
project/demo/: views.py
project/utils/: res_status.py
(+119 files in other folders)
